# sermon_translate

./: .gitignore  AGENTS.md  README.md  dev.sh
.github/workflows/: client.yml  e2e.yml  server.yml
client/: Dockerfile  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
client/src/: App.tsx  main.tsx
client/src/api/: client.ts  index.ts  types.gen.ts
client/src/components/: ActiveSessionPanel.tsx  NewSessionModal.tsx  (+2 more)
e2e/: Dockerfile  docker-compose.yml  nginx.conf  package.json  playwright.config.ts  run.sh
e2e/fixtures/: test-speech.pcm
e2e/tests/: api-stats.spec.ts  app-shell.spec.ts  mp3-upload.spec.ts  session-crud.spec.ts  session-modal.spec.ts
native-client/docs/: 01-structure-and-codegen.md  02-api-and-transport.md  03-audio.md  04-state.md  05-ui.md  06-testing-and-ci.md  07-risks-and-decisions.md  README.md
server/: Dockerfile  pyproject.toml
server/src/: codegen.py  main.py
server/src/api/: __init__.py  deps.py  routes.py  store.py
server/src/models/: __init__.py  session.py  stats.py
server/src/pipelines/: __init__.py  _fairseq2_compat.py  base.py  echo.py  registry.py  seamless_streaming.py  spanish.py  spanish_direct.py  whisper_tts.py
server/src/transport/: __init__.py  base.py  handler.py  rtc.py  ws.py
server/tests/: conftest.py  test_api.py  test_codegen.py  test_echo_pipeline.py  test_models.py  test_pipeline_integration.py  test_pipelines.py  test_rtc_transport.py  test_seamless_streaming.py  test_spanish.py  test_spanish_direct.py  test_store.py  test_whisper_tts.py
(+12 files in other folders)
