[project]
name = "sermon-translate-server"
version = "0.1.0"
description = "Real-time sermon translation server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioquic>=1.3.0",
    "cryptography>=46.0.5",
    "edge-tts>=6.1.0",
    "faster-whisper>=1.1.0",
    "fastapi>=0.135.1",
    "numpy>=2.4.2",
    "sentencepiece>=0.2.0",
    "uvicorn[standard]>=0.41.0",
]

[project.scripts]
serve = "uvicorn src.main:app --reload --host 0.0.0.0 --port 8000"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.4",
    "transformers>=5.2.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
